Update review links

--- a/reviews.html
+++ b/reviews.html
@@ -50,23 +50,23 @@
         <div class="reviews-list">
           <div class="review--item">
             <h2 class="heading--lite mar-bot--8">Jeff is a great designer and an even stronger product design thinker. I hired him at Productboard and would hire him again.</h2>
-            <p><strong>Stephen, Co-Founder &amp; CEO</strong></p>
+            <a href="https://www.linkedin.com/in/stephenwalker/" class="reviews--link" target="_blank">Stephen, Co-Founder &amp; CEO</a>
           </div>
           <div class="review--item">
-            <h2 class="heading--lite mar-bot--8">Jeff has an incredible level of both drive and skill. It’s a rare combination that produces incredible results for fast-moving, action-oriented teams that are taking on large, time-sensitive challenges. He understands and cares about all aspects of the product development cycle and is willing to wear any hat when needed.<!--His breadth of perspectives enables him with an intuitive and valuable sense for balancing speed, scope, business value, customer value, risk, and quality when iterating and creating software.&rdquo;--></h2>
-            <p><strong>Fletcher, Chief Product Officer</strong></p>
+            <h2 class="heading--lite mar-bot--8">Jeff has an incredible level of both drive and skill. It’s a rare combination that produces incredible results for fast-moving, action-oriented teams that are taking on large, time-sensitive challenges. He understands and cares about all aspects of the product development cycle and is willing to wear any hat when needed.</h2>
+            <a href="https://www.linkedin.com/in/fletcherdennison/" class="reviews--link" target="_blank">Fletcher, Chief Product Officer</a>
           </div>
           <div class="review--item">
-            <h2 class="heading--lite mar-bot--8">Jeff is more than a skilled product designer; he’s a fantastic communicator, a hardworking colleague, and an absolute joy to be around. He has my highest recommendation and I feel confident that he will bring his unique blend of creativity, passion, and humor to any team.<!--His breadth of perspectives enables him with an intuitive and valuable sense for balancing speed, scope, business value, customer value, risk, and quality when iterating and creating software.--></h2>
-            <p><strong>Jesse, CTO &amp; Co-Founder</strong></p>
+            <h2 class="heading--lite mar-bot--8">Jeff is more than a skilled product designer; he’s a fantastic communicator, a hardworking colleague, and an absolute joy to be around. He has my highest recommendation and I feel confident that he will bring his unique blend of creativity, passion, and humor to any team.</h2>
+            <a href="https://www.linkedin.com/in/jesseforrest/" class="reviews--link" target="_blank">Jesse, CTO &amp; Co-Founder</a>
           </div>
           <div class="review--item">
-            <h2 class="heading--lite mar-bot--8">I had the pleasure of working with Jeff as our first designer at Thriveworks. He’s the most passionate designer I’ve worked with. He cares about the problems, he cares about the users. Jeff's a great utility knife, running user research, putting together prototypes, wireframes, and even coding front-end as-needed. If you’re looking for a lean, mean, high-velocity design machine, it’s Jeff!!<!--His breadth of perspectives enables him with an intuitive and valuable sense for balancing speed, scope, business value, customer value, risk, and quality when iterating and creating software.--></h2>
-            <p><strong>Kabir, Chief Product Officer</strong></p>
+            <h2 class="heading--lite mar-bot--8">I had the pleasure of working with Jeff as our first designer at Thriveworks. He’s the most passionate designer I’ve worked with. He cares about the problems, he cares about the users. Jeff's a great utility knife, running user research, putting together prototypes, wireframes, and even coding front-end as-needed. If you’re looking for a lean, mean, high-velocity design machine, it’s Jeff!! His breadth of perspectives enables him with an intuitive and valuable sense for balancing speed, scope, business value, customer value, risk, and quality when iterating and creating software.</h2>
+            <a href="https://www.linkedin.com/in/kabirdaya/" class="reviews--link" target="_blank">Kabir, Chief Product Officer</a>
           </div>
           <div class="review--item">
             <h2 class="heading--lite mar-bot--8">I highly recommend Jeff for UI design projects. His expertise in Figma, attention to detail, and ability to create intuitive interfaces make him a valuable asset. Jeff's designs are visually appealing, modern, and user-friendly. He is a great communicator, collaborator, and consistently delivers high-quality work within deadlines. I highly recommend Jeff for any project that requires top-notch UI design skills, especially in Figma.</h2>
-            <p><strong>Mathew, Full-stack Engineer</strong></p>
+            <a href="https://www.linkedin.com/in/mathewmozer/" class="reviews--link" target="_blank">Mathew, Full-stack Engineer</a>
           </div>
         </div>
 
