Add in Mychorelist

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
     <main class="container">
       
       <div class="hero text--limit">
+
+        <a href="https://mychorelist.us/?ref=hire.jefff.co" class="promo cf mar-bot--64">
+          <img src="images/mychorelist--logo.png" alt="My Chorelist logo" />
+          <h3 class="heading body ibm">
+            My Chorelist
+          </h3>
+          <p class="body">
+            A simple weekly chore list for your kid. 100% private.
+          </p>
+        </a>
+
         <h1 class="heading xl ibm mar-bot--32">
           I’m Jeff, a product, growth, and business designer.
         </h1>
