Add in new work

--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
       <div class="works featured" id="work">
         <h3 class="heading mar-bot--40">Impactful work</h3>
         <!-- <p class=" mar-bot--40">Selected recent work by Jeff</p> -->
+
+        <!-- work -->
+        <a class="work-item soon">
+          <h2>Staff Product Designer, Homebase</h2>
+          <p>Increased new signups by 15%, increased activation by 8%, and increased paid upgrades by 4%. (coming soon)</p>
+          <img src="images/new-work/homebase--signup.png" />
+        </a>
+        <!--/ work -->
         
         <!-- work -->
         <a href="healme.html" class="work-item">
@@ -113,14 +121,31 @@
         
         <div class="grid grid--2 grid-gap--32 mar-bot--32">
           <!-- work -->
-          <a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=105%3A198&type=design&node-id=6065-22297&viewport=306%2C260%2C0.03&t=jKowwjcvOX6WBatE-8&scaling=scale-down&starting-point-node-id=6065%3A22297&show-proto-sidebar=1&hide-ui=1" target="_blank" class="work-item work-item--grid">
+          <a href="https://www.figma.com/proto/VB4GgGrHLxoVJ7s8zSF5Rz/Case-Studies?page-id=18%3A4357&node-id=18-4358&node-type=canvas&viewport=114%2C373%2C0.09&t=KfzKG5Oy6fIw9F8C-8&scaling=min-zoom&content-scaling=fixed&hide-ui=1" target="_blank" class="work-item work-item--grid">
+            <h2>Reforge</h2>
+            <p>Take home test for job interview</p>
+            <img src="images/cs--reforge.png" />
+          </a>
+          <!--/ work -->
+          <!-- work -->
+          <a href="https://www.figma.com/proto/VB4GgGrHLxoVJ7s8zSF5Rz/Case-Studies?page-id=3%3A7965&node-id=3-11844&node-type=canvas&viewport=428%2C413%2C0.03&t=O3vnXO5V6mhQw4So-8&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=3%3A11844&show-proto-sidebar=1&hide-ui=1" target="_blank" class="work-item work-item--grid">
+            <h2>Thriveworks</h2>
+            <p>Case study for Support center work</p>
+            <img src="images/cs--thriveworks.png" />
+          </a>
+          <!--/ work -->
+        </div>
+
+        <div class="grid grid--2 grid-gap--32 mar-bot--32">
+          <!-- work -->
+          <a href="https://www.figma.com/proto/vU7DRxjRlLRXyc65zp6pOz/Product-Design-(Copy)?page-id=105%3A198&node-id=6065-22297&node-type=canvas&viewport=199%2C201%2C0.02&t=eEEga8J2jsrzOcIv-8&scaling=scale-down&content-scaling=fixed&starting-point-node-id=6065%3A22297&show-proto-sidebar=1&hide-ui=1" target="_blank" class="work-item work-item--grid">
             <h2>Heal.me: Mobile web</h2>
             <p>Marketplace redesign for clients (prototype)</p>
             <img src="images/new-work/image-healme-marketplace-mobile.png" />
           </a>
           <!--/ work -->
           <!-- work -->
-          <a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=1047%3A280&type=design&node-id=1047-568&viewport=535%2C642%2C0.11&t=FQDMGZ9YRZBersp6-8&scaling=scale-down&starting-point-node-id=1047%3A568&hide-ui=1" target="_blank" class="work-item work-item--grid">
+          <a href="https://www.figma.com/proto/vU7DRxjRlLRXyc65zp6pOz/Product-Design-(Copy)?page-id=1047%3A280&node-id=1047-568&node-type=canvas&viewport=342%2C438%2C0.07&t=ol5pN1R9XaGgiN1H-8&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1047%3A568&show-proto-sidebar=1&hide-ui=1" target="_blank" class="work-item work-item--grid">
             <h2>Heal.me: Booking Widget</h2>
             <p>Embeddable widget to add seamless booking (prototype)</p>
             <img src="images/new-work/image-booking-widget.png" />
@@ -137,7 +162,7 @@
           </a>
           <!--/ work -->
           <!-- work -->
-          <a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=105%3A198&type=design&node-id=4632-15119&viewport=306%2C260%2C0.03&t=jKowwjcvOX6WBatE-8&scaling=scale-down&starting-point-node-id=4632%3A15119&hide-ui=1" target="_blank" class="work-item work-item--grid">
+          <a href="https://www.figma.com/proto/vU7DRxjRlLRXyc65zp6pOz/Product-Design-(Copy)?page-id=105%3A198&node-id=4632-15119&node-type=canvas&viewport=199%2C201%2C0.02&t=eEEga8J2jsrzOcIv-8&scaling=scale-down&content-scaling=fixed&starting-point-node-id=4632%3A15119&show-proto-sidebar=1&hide-ui=1" target="_blank" class="work-item work-item--grid">
             <h2>Heal.me: Mobile app</h2>
             <p>All-in-one practice toolkit (prototype)</p>
             <img src="images/new-work/image-healme-mobile-app.png" />
@@ -154,7 +179,7 @@
           </a>
           <!--/ work -->
           <!-- work -->
-          <a href="https://www.figma.com/proto/cQ7SvQPgyPSOTPy0SCxfSG/Membership-Benefits?page-id=4801%3A14243&type=design&node-id=4801-14279&viewport=298%2C428%2C0.05&t=T8D4G1UM3Ieg6tro-8&scaling=min-zoom&hide-ui=1" target="_blank" class="work-item work-item--grid">
+          <a href="https://www.figma.com/proto/vU7DRxjRlLRXyc65zp6pOz/Product-Design-(Copy)?page-id=3105%3A7945&node-id=3693-228&node-type=section&viewport=276%2C325%2C0.04&t=6inPZBguYRhQhj87-8&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=3693%3A228&hide-ui=1" target="_blank" class="work-item work-item--grid">
             <h2>Heal.me: Pitch deck</h2>
             <p>I rewrote &amp; redesigned our decks for better closing</p>
             <img src="images/new-work/image-sales-deck.png" />
