--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       
       <div class="hero text--limit">
 
-        <a href="https://mychorelist.us/?ref=hire.jefff.co" class="promo cf mar-bot--64">
+        <a href="https://mychorelist.us/?ref=hire.jefff.co" target="_blank" class="promo cf mar-bot--64">
           <img src="images/mychorelist--logo.png" alt="My Chorelist logo" />
           <h3 class="heading body ibm">
             My Chorelist
