--- a/reviews.html
+++ b/reviews.html
@@ -49,6 +49,10 @@
         
         <div class="reviews-list">
           <div class="review--item">
+            <h2 class="heading--lite mar-bot--8">Jeff is one of those rare talents who effortlessly balances creativity with strategic insight, making him a driving force in building a product that resonates deeply with our users. His dedication to understanding the holistic health market, combined with his innovative approach to design, has been instrumental in shaping a user experience that truly reflects the values and needs of our users.</h2>
+            <a href="https://www.linkedin.com/in/chadagate/" class="reviews--link" target="_blank">Chad, CTO</a>
+          </div>
+          <div class="review--item">
             <h2 class="heading--lite mar-bot--8">Jeff is a great designer and an even stronger product design thinker. I hired him at Productboard and would hire him again.</h2>
             <a href="https://www.linkedin.com/in/stephenwalker/" class="reviews--link" target="_blank">Stephen, Co-Founder &amp; CEO</a>
           </div>
