Add in Curated docs

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
       
       <div class="hero text--limit">
 
+        <a href="https://docs.google.com/document/d/1sjazRACTOvJBOqYeRUVLYsPCC5FW5Qk8QTOOPm0psJs/?ref=hire.jefff.co" target="_blank" class="promo cf mar-bot--64">
+          <img src="images/docs--logo.png" alt="Good reads for product folks logo" />
+          <h3 class="heading body ibm">
+            Good reads for product folks
+          </h3>
+          <p class="body">
+            Ever-growing list of growth-related articles.
+          </p>
+        </a>
+
         <a href="https://mychorelist.us/?ref=hire.jefff.co" target="_blank" class="promo cf mar-bot--64">
           <img src="images/mychorelist--logo.png" alt="My Chorelist logo" />
           <h3 class="heading body ibm">
