Tweak to articles content

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             Good reads for product folks
           </h3>
           <p class="body">
-            Ever-growing list of growth-related articles.
+            Curated articles on design, growth, etc.
           </p>
         </a>
 
