Update copy for product reads

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <a href="https://docs.google.com/document/d/1sjazRACTOvJBOqYeRUVLYsPCC5FW5Qk8QTOOPm0psJs/?ref=hire.jefff.co" target="_blank" class="promo cf mar-bot--64">
           <img src="images/docs--logo.png" alt="Good reads for product folks logo" />
           <h3 class="heading body ibm">
-            Good reads for product folks
+            Curated product reads
           </h3>
           <p class="body">
-            Curated articles on design, growth, etc.
+            Design, growth, etc.
           </p>
         </a>
 
