Update content and resume

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       <nav class="nav">
         <a class="nav--link active">About</a>
         <a href="design.html" class="nav--link">Process</a>
-<a href="jeff-doan-resume--2024.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
+<a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
         <a href="reviews.html" class="nav--link">Reviews</a>
         <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
       </nav>
@@ -48,7 +48,7 @@
         </h1>
         <!-- <p class="body mar-bot--32">I enjoy designing for conversion, driving customer & business value, optimizing onboarding to be effective, and simplifying pains with better tooling. I’m typically writing in Google Docs, on a call with a customer, working with engineers/PMs, pixeling in Figma, digging into data, or coding in Sublime Text.</p> -->
         <p class="heading--lite body mar-bot--24">
-          I have 18+ years of UX/UI design, product, and development experience. In my career, I’ve worked across agencies, B2C, B2B, SaaS, marketplaces, and mental health/health tech.
+          I have 18+ years of UX/UI design, product, and development experience. In my career, I’ve worked across agencies, B2C, B2B, SaaS, marketplaces, and mental health/health tech. I’ve been leaning into AI to help speed my processes (prototyping, research, ideation, etc.) and I’d love to share more about this.
         </p>
         <p class="heading--lite body mar-bot--80">
           I craft 0-1 experiences and wear many hats to do so, and I thrive where I can make an impact. I’m a lover of garage rock and live shows, collecting vinyls, minivans, and colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
@@ -66,6 +66,7 @@
           <h3 class="heading mar-bot--16">Skills</h3>
           <ul class="skill-list grid grid--2">
             <li>Product design</li>
+            <li>AI tooling</li>
             <li>UX design</li>
             <li>Design systems &amp; components</li>
             <li>Product strategy &amp; prioritization</li>
@@ -76,7 +77,7 @@
             <li>SaaS, B2B, B2C, DTC</li>
             <li>Mobile web &amp; app design</li>
             <li>Email design &amp; build</li>
-            <li>SMS &amp; push notif copywriting</li>
+            <li>SMS &amp; push notifications</li>
             <li>Business design</li>
             <li>Growth design</li>
             <li>Prototyping</li>
@@ -90,7 +91,6 @@
             <li>HTML/CSS/JavaScript</li>
             <li>Ruby/Rails/PHP</li>
             <li>Pitch/Sales decks</li>
-            <li>ChatGPT</li>
           </ul>
         </div>
       </div>
@@ -121,7 +121,7 @@
 
       <!-- sticky CTA for mobile -->
       <div class="sticky-cta">
-        <a href="jeff-doan-resume--2024.pdf" target="_blank" class="cta--link">View résumé</a>
+        <a href="jeff-doan-resume--2025.pdf" target="_blank" class="cta--link">View résumé</a>
       </div>
 
     </div>
