--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav class="nav">
         <a href="about.html" class="nav--link">About</a>
         <a href="design.html" class="nav--link">Process</a>
-<a href="jeff-doan-resume--2024.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
+<a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
         <a href="reviews.html" class="nav--link">Reviews</a>
         <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
       </nav>
@@ -78,7 +78,7 @@
         <!-- work -->
         <a class="work-item soon">
           <h2>Staff Product Designer, Homebase</h2>
-          <p>Increased new signups by 15%, increased activation by 8%, and increased paid upgrades by 4%. (coming soon)</p>
+          <p>Increased new signups by 15%, increased activation by 8%, and increased paid upgrades by 4%. <strong>New:</strong> Doubled payroll runs with AI (coming soon)</p>
           <img src="images/new-work/homebase--signup.png" />
         </a>
         <!--/ work -->
@@ -308,7 +308,7 @@
 
       <!-- sticky CTA for mobile -->
       <div class="sticky-cta">
-        <a href="jeff-doan-resume--2024.pdf" target="_blank" class="cta--link">View résumé</a>
+        <a href="jeff-doan-resume--2025.pdf" target="_blank" class="cta--link">View résumé</a>
       </div>
 
     </div>
