Add in Homebase case study

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <!-- <p class=" mar-bot--40">Selected recent work by Jeff</p> -->
 
         <!-- work -->
-        <a class="work-item soon">
+        <a href="homebase.html" class="work-item">
           <h2>Staff Product Designer, Homebase</h2>
-          <p>Increased new signups by 15%, increased activation by 8%, and increased paid upgrades by 4%. <strong>New:</strong> Doubled payroll runs with AI (coming soon)</p>
+          <p>Increased new signups by 15%, increased activation by 8%, and increased paid upgrades by 4%. <strong>New:</strong> Increased payroll runs ~700% with AI</p>
           <img src="images/new-work/homebase--signup.png" />
         </a>
         <!--/ work -->
