Update case studies

--- a/healme.html
+++ b/healme.html
@@ -63,8 +63,9 @@
           <!-- <hr class="designy" /> -->
           
           <div class="works">
-            <div style="position: relative; padding-bottom: 56.25%; height: 0;" class="mar-bot--16"><iframe src="https://www.loom.com/embed/0bdf5d6aea6746db9a439021f966ce01?sid=3935b42e-b9d3-4f78-8693-b3b457bf0f9b" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
-            <div class="micro mar-bot--32">Heal.me doesn’t offer free trials, so here’s a video showing the below work.</div>
+            <!-- <div style="position: relative; padding-bottom: 56.25%; height: 0;" class="mar-bot--16"><iframe src="https://www.loom.com/embed/0bdf5d6aea6746db9a439021f966ce01?sid=3935b42e-b9d3-4f78-8693-b3b457bf0f9b" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+            <div class="micro mar-bot--32">Heal.me doesn’t offer free trials, so here’s a video showing the below work.</div> -->
+            <img src="images/healme--calendar.png" class="work-sample mar-bot--40" />
             <a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=1424%3A1359&type=design&node-id=1470-220&viewport=752%2C307%2C0.06&t=oRuSHQQhhX2h9VAj-8&scaling=min-zoom&starting-point-node-id=1470%3A220&hide-ui=1" target="_blank" class="btn btn--black">View prototype</a>
           </div>
           
@@ -145,13 +146,13 @@
               <br />
               The saas product is the main source of value for our customers (i.e. where they set up and run their businesses from) and by not making it more efficient, we were leaving thousands of dollars on the table through wasted sales efforts and churn. The design system was made specifically for our less-than-tech savvy customers, prioritized clarity and simplicity, and improved on critical workflows for maximizing our most important KPI, bookings.
             </p>
-            <h3 class="heading body mar-bot--8">Loom videos</h3>
+            <!-- <h3 class="heading body mar-bot--8">Loom videos</h3>
             <p class="micro mar-bot--16">See more context/details on all my Heal.me work</p>
             <div class="links">
               <a href="https://www.loom.com/share/c7e3a8758949420a88065a02fdd3d7b6?sid=403060ff-4e49-4160-85d9-777b878f9c06" target="_blank">Mobile app</a>
               <a href="https://www.loom.com/share/c3c62f2c89284e2786ceaa33ce357728?sid=7655ad69-b849-47b1-8d57-d9cae5aee65d" target="_blank">Booking Widget (mobile)</a>
               <a href="https://www.loom.com/share/ba59d35ac0fd4f96ad3d7196b988f287?sid=7b1ac461-c02b-4fe6-be3a-9236f9c51bfd" target="_blank">Booking Widget (desktop)</a>
-            </div>
+            </div> -->
           </div>
         </div>
         <!-- <p class="body mar-bot--32"><strong>What I did:</strong> UX research, UX writing, data analysis, visual design, prototyping, usability testing, product strategy &amp; prioritization, and more.</p>
