--- a/homebase.html
+++ b/homebase.html
@@ -61,15 +61,16 @@
           <br />
           Payroll adoption is the biggest path for growth, but business owners rarely think about Homebase for payroll, and the set up process is arduous. It’s the stickiest feature, it allows revenue for freemium customers as an add-on, and adds major value to both businesses and their employees (time saved + cash advances).
         </p>
-          <p><strong>The Challenge</strong>
+          <p class="mar-bot--40"><strong>The Challenge</strong>
           <br />
       		Can we drive more business owners to us <u>before</u> choosing a payroll provider and shorten time to payroll run for those ready to use our payroll? Can we make this feel magical? Can we change their behavior to start with payroll setup?</p>
 
-      	<p>
+      	<div class="works">
+          <img src="images/homebase/doc-uploader.png" class="work-sample mar-bot--40" />
       		<a href="https://www.figma.com/proto/3I386bJGfKwbq7sIXQyJgc/Payroll-first-Journey?page-id=406%3A1514&node-id=1023-35790&p=f&viewport=270%2C-117%2C0.03&t=46rc7VnAyk9ysXhh-8&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1023%3A35790&show-proto-sidebar=1&hide-ui=1" target="_blank" class="btn btn--black">View prototype</a>
-      	</p>
+      	</div>
           
-          <hr class="designy" />
+          <!-- <hr class="designy" /> -->
           
           <!-- <div class="works">
             <div style="position: relative; padding-bottom: 56.25%; height: 0;" class="mar-bot--16"><iframe src="https://www.loom.com/embed/0bdf5d6aea6746db9a439021f966ce01?sid=3935b42e-b9d3-4f78-8693-b3b457bf0f9b" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
