Update portfolio images and clean up content

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </p>
         </a>
 
-        <a href="https://mychorelist.us/?ref=hire.jefff.co" target="_blank" class="promo cf mar-bot--64">
+        <!-- <a href="https://mychorelist.us/?ref=hire.jefff.co" target="_blank" class="promo cf mar-bot--64">
           <img src="images/mychorelist--logo.png" alt="My Chorelist logo" />
           <h3 class="heading body ibm">
             My Chorelist
@@ -62,7 +62,7 @@
           <p class="body">
             A simple weekly chore list for your kid. 100% private.
           </p>
-        </a>
+        </a> -->
 
         <h1 class="heading xl ibm mar-bot--32">
           I’m Jeff, a product, growth, and business designer.
@@ -79,7 +79,7 @@
         <a href="homebase.html" class="work-item">
           <h2>Staff Product Designer, Homebase</h2>
           <p>Increased new signups by 15%, increased activation by 8%, and increased paid upgrades by 4%. <strong>New:</strong> Increased payroll runs ~700% with AI</p>
-          <img src="images/new-work/homebase--signup.png" />
+          <img src="images/homebase/doc-uploader.png" />
         </a>
         <!--/ work -->
         
@@ -128,40 +128,6 @@
       <div class="works" id="links">
         <h3 class="heading mar-bot--40">Figma links, prototypes, side projects, etc.</h3>
         <!-- <p class="mar-bot--40">Figma prototypes, side-projects, writings.</p> -->
-        
-        <div class="grid grid--2 grid-gap--32 mar-bot--32">
-          <!-- work -->
-          <a href="https://www.figma.com/proto/9cJeSKAa2C8Cfjwe3maSNp/Payroll-EOY-2024?page-id=330%3A11560&node-id=759-18746&node-type=canvas&viewport=137%2C260%2C0.04&t=tbT9zlrcFOEPBMZE-8&scaling=scale-down&content-scaling=fixed&starting-point-node-id=759%3A18746&show-proto-sidebar=1&hide-ui=1" target="_blank" class="work-item work-item--grid">
-            <h2>Homebase: Payroll 2024</h2>
-            <p>Multi-touch campaign to get customers to switch to our payroll. I led the messaging, UX, and design across myriad touchpoints.</p>
-            <img src="images/new-work/image--hb--payroll.png" />
-          </a>
-          <!--/ work -->
-          <!-- work -->
-          <a href="https://www.figma.com/proto/AhHR3vF8Atrv39PtQ80Vel/GROW-343%3A-Mobile-Time-%26-Pay?page-id=209%3A9052&node-id=209-10059&node-type=canvas&viewport=584%2C636%2C0.08&t=EjnIbUKKICiVY3Rc-8&scaling=scale-down&content-scaling=fixed&starting-point-node-id=209%3A10059&hide-ui=1" target="_blank" class="work-item work-item--grid">
-            <h2>Homebase: Mobile Quick Start Guide</h2>
-            <p>Giving new mobile customers a step-by-step guide to value. I led the content, UX, and design. This is the first of many iterative tests.</p>
-            <img src="images/new-work/image--hb--qsg.png" />
-          </a>
-          <!--/ work -->
-        </div>
-
-        <div class="grid grid--2 grid-gap--32 mar-bot--32">
-          <!-- work -->
-          <a href="https://www.figma.com/proto/VB4GgGrHLxoVJ7s8zSF5Rz/Case-Studies?page-id=18%3A4357&node-id=18-4358&node-type=canvas&viewport=114%2C373%2C0.09&t=KfzKG5Oy6fIw9F8C-8&scaling=min-zoom&content-scaling=fixed&hide-ui=1" target="_blank" class="work-item work-item--grid">
-            <h2>Reforge</h2>
-            <p>Take home test for job interview</p>
-            <img src="images/cs--reforge.png" />
-          </a>
-          <!--/ work -->
-          <!-- work -->
-          <a href="https://www.figma.com/proto/VB4GgGrHLxoVJ7s8zSF5Rz/Case-Studies?page-id=3%3A7965&node-id=3-11844&node-type=canvas&viewport=428%2C413%2C0.03&t=O3vnXO5V6mhQw4So-8&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=3%3A11844&show-proto-sidebar=1&hide-ui=1" target="_blank" class="work-item work-item--grid">
-            <h2>Thriveworks</h2>
-            <p>Case study for Support center work</p>
-            <img src="images/cs--thriveworks.png" />
-          </a>
-          <!--/ work -->
-        </div>
 
         <div class="grid grid--2 grid-gap--32 mar-bot--32">
           <!-- work -->
