--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="design.html" class="nav--link">Process</a>
 <a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
         <a href="reviews.html" class="nav--link">Reviews</a>
+        <a href="https://bit.ly/4dJLPK9" class="nav--link hide-for-small" target="_blank">Docs</a>
         <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
       </nav>
     </header>
@@ -44,17 +45,7 @@
       
       <div class="hero text--limit">
 
-        <a href="https://docs.google.com/document/d/1sjazRACTOvJBOqYeRUVLYsPCC5FW5Qk8QTOOPm0psJs/?ref=hire.jefff.co" target="_blank" class="promo cf mar-bot--64">
-          <img src="images/docs--logo.png" alt="Good reads for product folks logo" />
-          <h3 class="heading body ibm">
-            Curated product reads
-          </h3>
-          <p class="body">
-            Design, growth, etc.
-          </p>
-        </a>
-
-        <!-- <a href="https://mychorelist.us/?ref=hire.jefff.co" target="_blank" class="promo cf mar-bot--64">
+        <a href="https://mychorelist.us/?ref=hire.jefff.co" target="_blank" class="promo cf mar-bot--64">
           <img src="images/mychorelist--logo.png" alt="My Chorelist logo" />
           <h3 class="heading body ibm">
             My Chorelist
@@ -62,7 +53,7 @@
           <p class="body">
             A simple weekly chore list for your kid. 100% private.
           </p>
-        </a> -->
+        </a>
 
         <h1 class="heading xl ibm mar-bot--32">
           I’m Jeff, a product, growth, and business designer.
@@ -128,6 +119,16 @@
       <div class="works" id="links">
         <h3 class="heading mar-bot--40">Figma links, prototypes, side projects, etc.</h3>
         <!-- <p class="mar-bot--40">Figma prototypes, side-projects, writings.</p> -->
+
+        <a href="https://bit.ly/4dJLPK9" target="_blank" class="promo cf mar-bot--32">
+          <img src="images/docs--logo.png" alt="Good reads for product folks logo" />
+          <h3 class="heading body ibm">
+            Curated product reads
+          </h3>
+          <p class="body">
+            Design, growth, etc.
+          </p>
+        </a>
 
         <div class="grid grid--2 grid-gap--32 mar-bot--32">
           <!-- work -->
