Update heal.me copy

--- a/healme.html
+++ b/healme.html
@@ -75,7 +75,7 @@
               <li><strong>Project:</strong> Heal.me saas product</li>
               <li><strong>Role:</strong> Product design, research, data analysis, UX writing, product manager</li>
               <li><strong>Timeline:</strong> 4 weeks</li>
-              <li><strong>Team:</strong> myself, CTO, CEO, 2 engineers, product specialist, marketing</li>
+              <li><strong>Team:</strong> myself, CTO, CEO, 2 engineers, sales reps</li>
               <li><strong>Tools:</strong> Figma, Intercom, Google Docs, Google Sheets, Google Analyics, Maze</li>
             </ul>
             <p>
@@ -127,7 +127,7 @@
             <ul>
               <li><strong>Metrics &amp; KPIs:</strong> We are still limited in terms of data visibility, but the main KPIs here were time to activation, number of bookings across the platform, and percentage of bookings done by our customers themselves.</li>
               <li><strong>User Feedback:</strong> I did all the user-acceptance definition and testing, and then when we were comfortable with the stable release, we soft-launched this for a few days before notifying all customers. Our customers have loved the streamlined UI (more consistent and easier to use visually) and the simplified workflows (saving time and being less confusing).</li>
-              <li><strong>Business Impact:</strong> Activations (increased ~20%, more on this later), bookings (increased MOM 20%), and percentage bookings have all increased (increased 24%) with no noticeable downside (i.e. less customer support tickets on How do I do X, Y, or Z).</li>
+              <li><strong>Business Impact:</strong> Activations (increased ~20%, more on this later), bookings (increased MOM 20%), and practitioner-created bookings (increased 74%!!) have all increased with no noticeable downside (i.e. less customer support tickets on How do I do X, Y, or Z).</li>
             </ul>
             <p>
               <strong>Lessons Learned/Challenges</strong>
