Update nav links

--- a/healme.html
+++ b/healme.html
@@ -35,7 +35,8 @@
         <a href="about.html" class="nav--link">About</a>
         <a href="design.html" class="nav--link">Process</a>
 <a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
-<a href="reviews.html" class="nav--link">Reviews</a>
+        <a href="reviews.html" class="nav--link">Reviews</a>
+        <a href="https://bit.ly/4dJLPK9" class="nav--link hide-for-small" target="_blank">Docs</a>
         <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
       </nav>
     </header>
