--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             My Chorelist
           </h3>
           <p class="body">
-            A simple weekly chore list for your kid. 100% private.
+            A simple chore list for your kid. 100% private.
+            <small class="micro text--grey">Built with NextJS</small>
           </p>
         </a>
 
