--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
         <a href="design.html" class="nav--link">Process</a>
 <a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
         <a href="reviews.html" class="nav--link">Reviews</a>
+        <a href="https://bit.ly/4dJLPK9" class="nav--link hide-for-small" target="_blank">Docs</a>
         <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
       </nav>
     </header>
