--- a/reviews.html
+++ b/reviews.html
@@ -49,6 +49,12 @@
         </h1>
         
         <div class="reviews-list">
+          
+          <div class="review--item">
+            <h2 class="heading--lite mar-bot--8">Jeff approaches every problem with a huge amount of energy and hustle, enabling him to get to breakthrough on tough design challenges in a short period of time. He sets the pace for others around him, driving up the velocity for the whole team. Customers get value quickly and continuously which is the whole reason we are in business.</h2>
+            <a href="https://www.linkedin.com/in/raymondsandza/" class="reviews--link" target="_blank">Ray, VP Strategy</a>
+          </div>
+
           <div class="review--item">
             <h2 class="heading--lite mar-bot--8">Jeff is one of those rare talents who effortlessly balances creativity with strategic insight, making him a driving force in building a product that resonates deeply with our users. His dedication to understanding the holistic health market, combined with his innovative approach to design, has been instrumental in shaping a user experience that truly reflects the values and needs of our users.</h2>
             <a href="https://www.linkedin.com/in/chadagate/" class="reviews--link" target="_blank">Chad, CTO</a>
