Add in updated portfolio

--- a/about.html
+++ b/about.html
@@ -67,7 +67,9 @@
           <h3 class="heading mar-bot--16">Skills</h3>
           <ul class="skill-list grid grid--2">
             <li>Product design</li>
-            <li>AI tooling</li>
+            <li>AI + agentic tooling</li>
+            <li>ChatGPT/Claude</li>
+            <li>Lovable/Bolt</li>
             <li>UX design</li>
             <li>Design systems &amp; components</li>
             <li>Product strategy &amp; prioritization</li>
@@ -89,7 +91,7 @@
             <li>Analytics &amp; data</li>
             <li>A/B testing</li>
             <li>Figma &amp; Storybook</li>
-            <li>HTML/CSS/JavaScript</li>
+            <li>HTML/CSS/JavaScript (React + Next)</li>
             <li>Ruby/Rails/PHP</li>
             <li>Pitch/Sales decks</li>
           </ul>
