Add custom GPT to homepage

--- a/index.html
+++ b/index.html
@@ -279,6 +279,13 @@
         <a href="jeff-doan-resume--2025.pdf" target="_blank" class="cta--link">View résumé</a>
       </div>
 
+      <!-- sticky GPT badge -->
+      <a href="https://chatgpt.com/g/g-684af3491ed88191bcaee7034e2bfc50-camping-packer-pal" target="_blank"v class="sticky-badge">
+        <img src="images/camping-packer-pal.png" />
+        <span class="badge--text">Camping Packer Pal</span>
+        <span class="micro text--grey">Try my custom GPT</span>
+      </a>
+
     </div>
 
   </body>
